Add comprehensive README.md and fix Java 17 compatibility
Co-authored-by: snxethan <77033537+snxethan@users.noreply.github.com>